<resources>
    <string name="app_name">RachmanWarehouse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="produk">Data Produk</string>
    <string name="suplier">Data suplier</string>
    <string name="jenis">Data Jenis Produk</string>
    <string name="admin">Data Admin</string>
    <string name="transaksi">Transaksi</string>
    <string name="nota">Nota Transaksi</string>
    <string name="laporan">Laporan</string>
    <string name="nama">Nama</string>
</resources>