<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transaksi"
            android:icon="@drawable/ic_transaksi"
            android:title="@string/transaksi" />
        <item
            android:id="@+id/nav_produk"
            android:icon="@drawable/ic_produk"
            android:title="@string/produk" />
        <item
            android:id="@+id/nav_suplier"
            android:icon="@drawable/ic_suplier"
            android:title="@string/suplier" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_admin"
            android:title="@string/admin" />
        <item
            android:id="@+id/nav_laporan"
            android:icon="@drawable/ic_laporan"
            android:title="@string/laporan" />
    </group>
</menu>